<?xml version="1.0" encoding="utf-8"?>

<resources>
     <string name="heading">Support Dawath Apps</string>
    <string name="hello_pollfish">Hello Pollfish! This Activity demonstrates how you can use Pollfish in your app. Please note, that this activity is recreated on each orientation change </string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="activity2">Orientations Activity</string>
    <string name="activity3">Incetivize Activity</string>
      <string name="hello_pollfish">Hello Pollfish! This Activity demonstrates how you can use Pollfish in your app. Please note, that this activity is recreated on each orientation change </string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="activity2">Orientations Activity</string>
    <string name="activity3">Incetivize Activity</string>
      <!-- BEGIN v2332 -->
    <string name="admob_publisher_id"></string>
    <string name="support">Support US </string>
      <string name="rate">Rate US </string>
     <string name="btnLike">Like</string>
    <string name="divider">Divider</string>
    <string name="aboutactivity">More Apps</string>
    <string name="about">About</string>
    <string name="help">Nouman Ali Khan FB</string>
     <string name="facebook">Bayyinah FB</string>
     <string name="facebooka">NAK Collection FB</string>
     <string name="facebookb">Eeman Designs FB</string>
    <string name="no_browser">No browser available!</string>
    <string name="wait">Wait</string>
    <string name="connect">Connect</string>
    <string name="load">Load</string>
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Delete</string>
    <string name="parse">Read</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="next">Next</string>
    <string name="first_run_title">Welcome</string>
    <string name="first_run_text">Your first step is to add one or more podcast subscriptions. Please use the green button below to open the add podcast dialog. The dialog also offers podcast suggestions and OPML subscription list imports.</string>
    <string name="first_run_add">Add podcasts</string>
    <string name="player_buffering">Buffering&#8230;</string>
    <string name="player_label">at %1$s of %2$s</string>
    <string name="player_label_short">%1$s of %2$s</string>
    <string name="player_error">Playback failed</string>
    <string name="podcast_image">Podcast logo</string>
    <string name="podcast_none">No podcast added</string>
    <string name="podcast_none_long">No podcasts added. Please use the plus icon in the menu to add subscriptions to this list.</string>
    <string name="podcast_none_selected">No podcast selected</string>
    <string name="podcast_select_all">Select All Surah</string>
    <plurals name="podcasts">
        
        <item quantity="one">Al Quran</item>
        <item quantity="other">%d Translations</item>
    </plurals>
    <string name="podcast_add_title">New podcast</string>
    <string name="podcast_add_button">Add</string>
    <string name="podcast_enter_url_here">Copy podcast address here</string>
    <string name="podcast_load_error">The podcast failed to load!</string>
    <string name="podcast_load_error_access_denied">The podcast failed to load because the access to the feed was denied.</string>
    <string name="podcast_load_error_explicit">The podcast failed to load because access to explicit content is blocked in this user profile.</string>
    <string name="podcast_load_error_not_reachable">The podcast failed to load because the server could not be reached or the address is invalid.</string>
    <string name="podcast_load_error_not_parseable">The podcast failed to load because the address does not point to a valid podcast feed.</string>
    <string name="podcast_load_multiple_progress">%1$d of %2$d Translations</string>
    <string name="podcast_load_multiple_error">The podcast\n\"%s\"\nfailed to load.</string>
    <string name="podcast_load_multiple_error_all">All Surah failed to load, please check your Internet connection!</string>
    <string name="podcast_block_explicit">Block podcasts with explicit content</string>
    <string name="episode_none">No episodes in this podcast</string>
    <string name="episode_none_all_podcasts">No episodes</string>
    <string name="episode_no_description">No description available.</string>
    <string name="episode_none_selected">No episode selected</string>
    <plurals name="episodes">
        <item quantity="one">One Surah</item>
        <item quantity="other">%d Surah</item>
    </plurals>
    <plurals name="episodes_new">
        <item quantity="one">One new Surah</item>
        <item quantity="other">%d new Surah</item>
    </plurals>
    <string name="episodes_no_new">No new Surah</string>
    <string name="episodes_total">total</string>
    <plurals name="episodes_filtered">
        <item quantity="one">One old Surah filtered</item>
        <item quantity="other">%d old Surah filtered</item>
    </plurals>
    <string name="episodes_select_all">Select all</string>
    <string name="episodes_old">Old</string>
    <string name="episodes_filter_all">All</string>
    <string name="episodes_filter_new">New</string>
    <string name="episodes_sort_toggle">Reverse order</string>
    <string name="download">Download</string>
    <string name="downloads">Downloads</string>
    <plurals name="downloads_remove_title">
        <item quantity="one">Delete download</item>
        <item quantity="other">Delete %d downloads</item>
    </plurals>
    <plurals name="downloads_remove_text">
        <item quantity="one">This Surah will no longer be available offline.</item>
        <item quantity="other">These episodes will no longer be available offline.</item>
    </plurals>
    <string name="downloads_none">No downloads. Use the download icon in the menu to make episodes available offline.</string>
    <string name="download_started">Download started for \n\"%s\"</string>
    <string name="download_failed">Download failed for \n\"%s\"</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_empty">Your playlist is empty. Use the episode list\'s context menu (press and hold any episode to enter) to add episodes to the playlist.</string>
    <string name="playlist_add">Add to Playlist</string>
    <string name="playlist_remove">Remove from Playlist</string>
    <string name="playlist_swipe_reorder">Swipe episodes to re-order</string>
    <string name="auth">Authorization</string>
    <string name="auth_edit">Edit Authorization</string>
    <string name="auth_required">Authorization required</string>
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_submit">Submit</string>
    <string name="file_select">Select</string>
    <string name="file_select_file">Select File</string>
    <string name="file_select_folder">Select Folder</string>
    <string name="file_select_access_denied">Access denied!</string>
    <string name="opml_import">Import OPML</string>
    <string name="opml_import_failed">OPML import failed</string>
    <string name="opml_export">Export OPML</string>
    <string name="opml_export_success">OPML file stored at\n%s</string>
    <string name="opml_export_failed">OPML export failed</string>
    <string name="suggestions">Suggestions</string>
    <string name="suggested_podcasts">Suggested podcasts</string>
    <string name="suggestion_listen">Listen</string>
    <string name="suggestion_watch">Watch</string>
    <string name="suggestion_confirm_explicit">This podcast is marked explicit. Are you sure you want to add it to your podcast list?</string>
    <string name="suggestions_none">No suggestions, please change your filters.</string>
    <string name="suggestions_load_error">Suggestions failed to load, please check your internet connection!</string>
    <string name="suggestions_send">Submit a podcast suggestion&#8230;</string>
    <string name="preferences">Preferences</string>
    <string name="pref_select_all_on_start_title">Select all on start</string>
    <string name="pref_select_all_on_start_summary">Load all subscriptions when the app starts</string>
    <string name="pref_category_interface">Interface</string>
    <string name="pref_theme_color_title">Theme color</string>
    <string name="pref_theme_color_dialog_title">Select theme color</string>
    <string name="pref_theme_color_dialog_use">Press new color to apply</string>
    <string name="pref_wide_episode_list_title">Wide episode list</string>
    <string name="pref_wide_episode_list_summary">Make room for more episode details</string>
    <string name="pref_auto_download_title">Auto download</string>
    <string name="pref_auto_download_summary">When on WiFi, make new episodes available offline</string>
    <string name="pref_auto_delete_title">Auto delete</string>
    <string name="pref_auto_delete_summary">Remove downloaded episodes when playback completes</string>
    <string name="pref_download_folder_title">Download folder</string>
    <string name="ok">OK</string>
    <string name="whatsNewTitle">Support Dawath Apps</string>
    <string name="whatsNewText">Aslamualyikum \n
        If you are benefiting from our Islamic Apps Please Consider Donating a Small Amount to Dawath Apps\n\n
        
        JazhakhAllah Khair\n  </string>
     <string name="about_text">
<![CDATA[Quran in Tamil Mp3 1.0.1\n\n

Bismillahi ar-Rahman ar-Raheem
Al-hamdulillahi rabbil ‘alameen \n\n
Quran in Tamil Mp3\n

Dawath apps \n\n





]]>
	  </string>
    
    
     
    
    
    
    
</resources>
