<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/username"
        android:inputType="textNoSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/auth_username" />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/auth_password"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_red"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@drawable/button_label"
            android:singleLine="true"
            android:ellipsize="marquee" />
        <Button
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_green"
            android:gravity="center"
            android:text="@string/auth_submit"
            android:textColor="@drawable/button_label"
            android:singleLine="true"
            android:ellipsize="marquee" />
    </LinearLayout>
</LinearLayout>