<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background ="@drawable/xmbg">

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="multipleChoiceModal" />

    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/podcast_none_long"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/font_size_small" />
    <com.dawathqurantampodcast.view.ProgressView
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_bright"
        android:contentDescription="@string/divider" />
    <ImageView
        android:id="@+id/podcast_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/podcast_image"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher" />
</LinearLayout>
