<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
    <TextView
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/first_run_text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/first_run_help_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_blue"
            android:gravity="center"
            android:text="@string/help"
            android:textColor="@drawable/button_label"
            android:singleLine="true"
            android:ellipsize="marquee" />
        <Button
            android:id="@+id/first_run_add_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_green"
            android:gravity="center"
            android:text="@string/first_run_add"
            android:textColor="@drawable/button_label"
            android:singleLine="true"
            android:ellipsize="marquee" />
    </LinearLayout>
</LinearLayout>